--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Victor Paz <1555@holbertonschool.com>
+Antonio Estela <1569@holbertonschool.com>
